# baimianxiao-backend

./: Cargo.toml
src/: access_code.rs  hcaptcha.rs  helpers.rs  main.rs
src/db/: mod.rs
src/db/reference/: artworkData.sql  authorData.sql  collection.sql  collectionData.sql  permit.sql  permitData.sql  thumb.sql  thumbData.sql
src/db/schemas/: artwork_data.rs  artwork_information.rs  author_data.rs  mod.rs  permit_data.rs  thumb.rs  thumb_data.rs
src/macros/: mod.rs  simple_route_get.rs
src/routes/: api_ptilomsg.rs  artwork_data.rs  mod.rs  thumbs.rs
src/routes/ptilopsis/api/: mod.rs  ptilomsg.rs
src/routes/ptilopsis/api/baimianxiao/: artwork.rs  mod.rs  thumbs.rs
