[package]
name = "baimianxiao-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
axum = "0.5.6"
tower = "0.4.12"
tower-service = "0.3.1"
tower-http = {version = "0.3.3", features = ["cors"]}
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
openssl = { version = "0.10.38", features = ["vendored"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
rustls = "0.20.4"
rand = "*"
