[package]
name = "baimianxiao-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
hyper = {version = "0.14.19", features = ["full"]}
hyper-tls = "0.5.0"
tower = "0.4.13"
tower-service = "0.3.2"
tower-http = {version = "0.3.4", features = ["cors"]}
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "*"
axum = "0.5.9"
sqlx = { version = "*", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
rand = "*"
xxhash-rust = {version = "0.8.5", features=["xxh64"]}
meilisearch-sdk = "0.17.0"
redis = { version = "0.21.5", features = ["aio","tokio-comp","connection-manager"] }
uuid={version = "*", features = ["v4","fast-rng"]}
url = "2.2.2"